--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,6 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "padded-blocks": ["error", { "classes": "always" },{ "blocks": "never" }]
   }
 }
